# LineDrawingExtraction

./: README.md
LogicalLinear/: .cproject  .project  ANNOUNCE  Makefile  Makefile.in  Paolina.pgm  README  alloc.h  alloca.c  basis-il.h  basis.c  basis.h  config.cache  config.status  configure  configure.in  conv.h  cxconv-16.c  cxconv-32.c  cxconv-8.c  cxconv-f.c  cxconv.t  image-8.c  image.c  image.h  image.t  kern.c  label-il.h  label.c  label.h  llconfig.h  llconfig.h.in  loglin-il.h  loglin.c  loglin.h  make-kern.c  make_custom_kern.c  pgm.c  pgmcxconv.c  pgmloglin.1  (+6 more)
LogicalLinear/stb-master/: a.out  read_image_test.c  read_image_test.cpp~  write_image_test.c~
LogicalLinear/stb-master/tests/: a.out  write_image_test.c
