dnl Process this file with autoconf to produce a configure script.
AC_INIT(image.h)
AC_CONFIG_HEADER(llconfig.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_LN_S
AC_PROG_CC_C_O
AC_PROG_INSTALL

AC_PATH_PROG(RM, rm)
AC_PATH_PROG(CP, cp)
AC_PATH_PROG(MV, mv)
AC_PATH_PROG(MKDIR, mkdir)
AC_PATH_PROG(SED, sed)
AC_PATH_PROG(TAR, tar)

dnl Checks for libraries.
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, exp)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h unistd.h)

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup)
AC_CHECK_FUNCS(expf)
AC_CHECK_FUNCS(sinf)
AC_CHECK_FUNCS(cosf)
AC_CHECK_FUNCS(rint)
AC_FUNC_ALLOCA

AC_OUTPUT(Makefile, echo timestamp > stamp-h)
